Fix item alignment for firefox

--- a/l10n_br_website_sale_zip/static/src/css/website_sale.css
+++ b/l10n_br_website_sale_zip/static/src/css/website_sale.css
@@ -1,5 +1,5 @@
 .zip-search {
-    height: 59px;
+    height: 60px;
 }
 .zip-search > a {
     margin-top: 24px;
